[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://UIResources/Fonts/Roboto32.tres" type="DynamicFont" id=2]

[node name="Lobby" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="Container" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VContainer" type="VBoxContainer" parent="Panel/Container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 804.0
margin_bottom = 380.0
custom_constants/separation = 10

[node name="HContainer" type="HBoxContainer" parent="Panel/Container/VContainer"]
margin_right = 784.0
margin_bottom = 70.0

[node name="Container" type="MarginContainer" parent="Panel/Container/VContainer/HContainer"]
margin_right = 784.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_constants/margin_left = 0

[node name="HContainer" type="HBoxContainer" parent="Panel/Container/VContainer/HContainer/Container"]
margin_right = 784.0
margin_bottom = 70.0

[node name="IPLabel" type="Label" parent="Panel/Container/VContainer/HContainer/Container/HContainer"]
margin_top = 21.0
margin_right = 20.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "IP"

[node name="IPValue" type="LineEdit" parent="Panel/Container/VContainer/HContainer/Container/HContainer"]
margin_left = 24.0
margin_right = 374.0
margin_bottom = 70.0
rect_min_size = Vector2( 350, 45 )
custom_fonts/font = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Container/VContainer/HContainer/Container/HContainer"]
editor/display_folded = true
margin_left = 378.0
margin_right = 458.0
margin_bottom = 70.0

[node name="buttonJoin" type="Button" parent="Panel/Container/VContainer/HContainer/Container/HContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 33.0
rect_min_size = Vector2( 77.4, 0 )
size_flags_stretch_ratio = 1.38
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="buttonSearch" type="Button" parent="Panel/Container/VContainer/HContainer/Container/HContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "Search"

[node name="upnpBroadcast" type="CheckBox" parent="Panel/Container/VContainer/HContainer/Container/HContainer"]
margin_left = 462.0
margin_right = 557.0
margin_bottom = 70.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Local Only"

[node name="buttonHost" type="Button" parent="Panel/Container/VContainer/HContainer/Container/HContainer"]
margin_left = 561.0
margin_right = 661.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Host"

[node name="LaunchMatch" type="Button" parent="Panel/Container/VContainer/HContainer/Container/HContainer"]
margin_left = 665.0
margin_right = 783.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Start game"

[node name="Panel" type="Panel" parent="Panel/Container/VContainer"]
modulate = Color( 0.835294, 0.835294, 0.835294, 1 )
margin_top = 80.0
margin_right = 784.0
margin_bottom = 360.0
size_flags_vertical = 3

[node name="Usernames" type="VBoxContainer" parent="Panel/Container/VContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
[connection signal="pressed" from="Panel/Container/VContainer/HContainer/Container/HContainer/VBoxContainer/buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="Panel/Container/VContainer/HContainer/Container/HContainer/VBoxContainer/buttonSearch" to="." method="_on_buttonSearch_pressed"]
[connection signal="pressed" from="Panel/Container/VContainer/HContainer/Container/HContainer/buttonHost" to="." method="_on_buttonHost_pressed"]
[connection signal="pressed" from="Panel/Container/VContainer/HContainer/Container/HContainer/LaunchMatch" to="." method="_on_LaunchMatch_pressed"]
